Replace deprecated Class.newInstance() calls with getDeclaredConstructor().newInstance() (#272)